# CourseIABD

./: README.md
PIA/ejercicios/: README.md  pyproject.toml
PIA/ejercicios/src/ejercicio_1/: main.py
PIA/ejercicios/src/ejercicio_2/: main.py  texto.txt
PIA/ejercicios/src/ejercicio_3/: main.py
PIA/mi-proyecto-python/: README.md  setup.cfg
PIA/mi-proyecto-python/src/: main.py
PIA/mi-proyecto-python/src/paquete/: app.py  cli.py  utils.py
PIA/mi-proyecto-python/src/tests/: test_basic.py
