[tool.poetry]
name = "mi-proyecto-python"
version = "0.1.0"
description = "Un proyecto de Python de ejemplo."
authors = ["Tu Nombre <tu.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"