[metadata]
name = mi-proyecto-python
version = 0.1.0
description = Un proyecto de ejemplo en Python.
author = Tu Nombre
author_email = tu.email@example.com
license = MIT
url = https://github.com/tuusuario/mi-proyecto-python

[options]
packages = find:
package_dir =
    = src
install_requires =
    # Aquí puedes listar las dependencias del proyecto, por ejemplo:
    # requests
    # numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mi-proyecto = paquete.cli:main